objects/ssot__BudgetCategoryValue__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActualAmount__c</fullName>
        <label>Actual Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ActualQuantity__c</fullName>
        <label>Actual Quantity</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BudgetCategoryId__c</fullName>
        <label>Budget Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BudgetPeriodId__c</fullName>
        <label>Budget Period</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Budget Category Value Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PlannedAmount__c</fullName>
        <label>Planned Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PlannedQuantity__c</fullName>
        <label>Planned Quantity</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__VarianceAmount__c</fullName>
        <label>Variance Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__VarianceQuantity__c</fullName>
        <label>Variance Quantity</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726574460_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BudgetCategoryValue_BudgetPeriodId_m_rel</label>
        <referenceTo>ssot__BudgetPeriod__dlm</referenceTo>
        <relationshipLabel>BudgetCategoryValue_BudgetPeriodId_m_rel</relationshipLabel>
        <relationshipName>rel_1716726574460_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726641508_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BudgetCategoryValue_BudgetCategoryId_rel</label>
        <referenceTo>ssot__BudgetCategory__dlm</referenceTo>
        <relationshipLabel>BudgetCategoryValue_BudgetCategoryId_rel</relationshipLabel>
        <relationshipName>rel_1716726641508_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>